force-app/main/default/objects/CCXR_Customer_Table_Status__c/CCXR_Customer_Table_Status__c.object-meta.xml
<CustomObject>
    <label>CCXR_Customer Table Status</label>
    <nameField>
        <displayFormat>CTSN-{0000}</displayFormat>
        <label>CCXR_CustomerTableStatusNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR_Customer Table Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>