force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/Button_1__c.field-meta.xml
<CustomField>
    <fullName>Button_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Button 1</label>
    <type>Checkbox</type>
</CustomField>