force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/CCXR_Customer__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Customer</label>
    <referenceTo>CCXR_Customer__c</referenceTo>
    <relationshipLabel>CCXR_Customer Table Statuses</relationshipLabel>
    <relationshipName>CCXR_Table_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>