force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/CCXR_Table__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Table</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CCXR_Table__c.CCXR_Table_Status__c</field>
            <operation>equals</operation>
            <value>Vacant, Reserved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCXR_Table__c</referenceTo>
    <relationshipLabel>CCXR_Customer Table Statuses</relationshipLabel>
    <relationshipName>CCXR_Table_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>