force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/Customer_Table_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Table_Status__c</fullName>
    <label>Customer Table Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>