force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/Time_of_reservation__c.field-meta.xml
<CustomField>
    <fullName>Time_of_reservation__c</fullName>
    <label>Time of reservation</label>
    <type>DateTime</type>
</CustomField>