force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/Timeofvisit__c.field-meta.xml
<CustomField>
    <fullName>Timeofvisit__c</fullName>
    <label>Timeofvisit</label>
    <type>DateTime</type>
</CustomField>