force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/Token_Number__c.field-meta.xml
<CustomField>
    <fullName>Token_Number__c</fullName>
    <label>Token Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>