force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/waittime__c.field-meta.xml
<CustomField>
    <fullName>waittime__c</fullName>
    <formula>IF((NOW() - Timeofvisit__c) * 24 * 60 &lt; 60,
    TEXT(FLOOR((NOW() - Timeofvisit__c) * 24 * 60)) &amp; &quot; mins&quot;,
    TEXT(FLOOR((NOW() - Timeofvisit__c) * 24)) &amp; &quot; hrs &quot; &amp; TEXT(MOD(FLOOR((NOW() - Timeofvisit__c) * 24 * 60), 60)) &amp; &quot; mins&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>waittime</label>
    <type>Text</type>
</CustomField>