force-app/main/default/objects/CCXR_Customer_Table_Status__c/fields/waittimeinmins__c.field-meta.xml
<CustomField>
    <fullName>waittimeinmins__c</fullName>
    <formula>FLOOR((NOW() - Timeofvisit__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>waittimeinmins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>