force-app/main/default/objects/CCXR_Customer_Table_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCXR_Table__c</columns>
    <columns>CCXR_Customer__c</columns>
    <columns>Customer_Table_Status__c</columns>
    <columns>Token_Number__c</columns>
    <columns>waittime__c</columns>
    <columns>waittimeinmins__c</columns>
    <columns>Button_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>